--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sacketty/angular-ecdsa"
+    "url": "http://github.com/sacketty/angular-ecdsa.git"
   },
   "author": [
     {
@@ -13,12 +13,7 @@
   ],
   "scripts": {
     "start": "grunt",
-    "test": "grunt test",
-    "postinstall": "./node_modules/.bin/bower install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/sacketty/angular-ecdsa.git"
+    "test": "grunt test"
   },
   "licenses": [
     {
@@ -26,37 +21,23 @@
     }
   ],
   "devDependencies": {
-    "load-grunt-tasks": "*",
     "time-grunt": "*",
-    "grunt": "~0.4.1",
-    "grunt-css": "~0.5.4",
-    "grunt-wiredep": "^1.7.0",
-    "grunt-contrib-connect": "~0.1.2",
-    "grunt-contrib-uglify": "~0.2.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-shell": "~0.2.2",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-ng-annotate": "~0.2.3",
-    "karma-mocha": "*",
-    "karma-chrome-launcher": "latest",
-    "karma-safari-launcher": "latest",
-    "karma-firefox-launcher": "latest",
-    "karma-ng-scenario": "latest",
-    "karma-script-launcher": "latest",
-    "karma-html2js-preprocessor": "latest",
-    "karma-jasmine": "latest",
-    "karma-phantomjs-launcher": "latest",
-    "karma": "~0.12.24",
+    "load-grunt-tasks": "*",
+    "grunt-contrib-uglify": "^0.2.1",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-watch": "^0.4.4",
+    "grunt-contrib-copy": "^0.4.1",
+    "grunt-ng-annotate": "^0.2.3",
+    "grunt-shell": "^0.2.2",
     "grunt-karma": "latest",
-    "grunt-open": "~0.2.2",
-    "ng-midway-tester": "2.0.5",
-    "bower": "~1.2.7",
+    "karma-jasmine": "latest",
+    "grunt-open": "^0.2.2",
     "grunt-browserify": "^3.1.0"
   },
   "dependencies": {
     "ecdsa": "^0.6.0",
     "coinkey": "^1.3.0",
-    "crypto-browserify": "^3.2.8"
+    "crypto-browserify": "^3.2.8",
+    "karma-chrome-launcher": "^0.1.5"
   }
 }
