--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "ecdsa": "^0.6.0",
     "coinkey": "^1.3.0",
     "crypto-browserify": "^3.2.8",
-    "karma-chrome-launcher": "^0.1.5"
+    "karma-chrome-launcher": "^0.1.5",
+    "pbkdf2-sha256": "^1.0.1",
+    "aes": "^0.1.0"
   }
 }
