--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "crypto-browserify": "^3.2.8",
     "karma-chrome-launcher": "^0.1.5",
     "pbkdf2-sha256": "^1.0.1",
-    "aes": "^0.1.0"
+    "aes": "^0.1.0",
+    "bigi": "^1.3.0",
+    "assert": "^1.1.2"
   }
 }
